Refactor Taskfile and remove setup task; update package.json to add User Requests view; implement RequestsTreeProvider for handling user requests in Copilot Chat; remove deprecated chat export and monitor services; streamline chat monitoring logic and enhance request handling.

--- a/package.json
+++ b/package.json
@@ -53,6 +53,11 @@
           "id": "copilotChatSecretaryView",
           "name": "Chat Monitor",
           "icon": "$(comment-discussion)"
+        },
+        {
+          "id": "copilotChatSecretaryRequestsView",
+          "name": "User Requests",
+          "icon": "$(list-ordered)"
         }
       ]
     },
