--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "copilot-chat-analyzer": "^0.0.3",
+    "copilot-chat-analyzer": "file:./copilot-chat-analyzer",
     "graphql-ws": "^6.0.6"
   }
 }
