feat: Add AI Responses Extraction functionality
- Introduced AIResponse and ConversationTurn interfaces to support extraction of AI responses from chat exports.
- Implemented getAIResponses and getConversationHistory methods in copilot-chat-analyzer library.
- Updated VS Code extension to display AI responses in the dialogs tree view, allowing users to see full conversation history.
- Added unit tests for response extraction and conversation history retrieval.

feat: Improve Dialogs Display

- Enhanced the Dialogs tree view to show a preview of the first user message and added the ability to copy chat JSON for debugging.
- Implemented collapsible dialog items that display user message previews.
- Added context menu options for copying chat JSON and individual request messages.

fix: Improve Tree Views UX

- Implemented a smart refresh strategy to prevent hover tooltip disruption during auto-refresh cycles.
- Expanded dialog items to show all user requests when a dialog is expanded.
- Added functionality to copy individual request messages from both User Requests and Dialogs views.

chore: Update package.json and extension.ts

- Registered new commands for copying chat JSON and request messages in package.json.
- Modified extension.ts to handle chat JSON storage and implement smart refresh logic.

--- a/package.json
+++ b/package.json
@@ -55,6 +55,16 @@
         "command": "copilotChatSecretary.refreshDialogs",
         "title": "Refresh Dialogs",
         "icon": "$(refresh)"
+      },
+      {
+        "command": "copilotChatSecretary.copyChatJson",
+        "title": "Copy Chat JSON",
+        "icon": "$(clippy)"
+      },
+      {
+        "command": "copilotChatSecretary.copyRequestMessage",
+        "title": "Copy Message",
+        "icon": "$(copy)"
       }
     ],
     "views": {
@@ -118,6 +128,23 @@
           "command": "copilotChatSecretary.clearHistory",
           "when": "view == copilotChatSecretaryProcessedDialogsView",
           "group": "navigation@2"
+        }
+      ],
+      "view/item/context": [
+        {
+          "command": "copilotChatSecretary.copyChatJson",
+          "when": "view == copilotChatSecretaryProcessedDialogsView && viewItem == processedDialog",
+          "group": "inline"
+        },
+        {
+          "command": "copilotChatSecretary.copyRequestMessage",
+          "when": "view == copilotChatSecretaryRequestsView && viewItem == userRequest",
+          "group": "inline"
+        },
+        {
+          "command": "copilotChatSecretary.copyRequestMessage",
+          "when": "view == copilotChatSecretaryProcessedDialogsView && viewItem == dialogRequestItem",
+          "group": "inline"
         }
       ]
     }
