feat: Rename "User Requests" to "Opened Dialog" and enhance conversation view with status indicators

--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
         },
         {
           "id": "copilotChatSecretaryRequestsView",
-          "name": "User Requests",
-          "icon": "$(list-ordered)"
+          "name": "Opened Dialog",
+          "icon": "$(comment-discussion)"
         },
         {
           "id": "copilotChatSecretaryProcessedDialogsView",
