--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,11 +43,8 @@ jobs:
       - name: Build extension
         run: pnpm run build
 
-      - name: Install VSCE
-        run: pnpm add -g @vscode/vsce
-
       - name: Package extension
-        run: vsce package
+        run: pnpm run package
 
       - name: Upload VSIX as artifact
         if: matrix.node-version == 18
