--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "copilot-chat-secretary",
   "displayName": "Copilot Chat Secretary",
   "description": "Real-time monitoring and status tracking for VS Code Copilot chat sessions",
-  "version": "0.2.0-1",
+  "version": "0.2.0",
   "publisher": "copilot-chat-secretary",
   "engines": {
     "vscode": "^1.104.0"
