--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "copilot-chat-secretary",
   "displayName": "Copilot Chat Secretary",
   "description": "Real-time monitoring and status tracking for VS Code Copilot chat sessions",
-  "version": "0.2.0",
-  "publisher": "copilot-chat-secretary",
+  "version": "0.3.0",
+  "publisher": "dealenx",
   "engines": {
     "vscode": "^1.104.0"
   },
